# stellarmesh

./: .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  README.qmd  README.rst  check_model.cpp  environment.yml  examples.py  pixi.toml  pyproject.toml  requirements.ci.txt  requirements.dev.txt  requirements.freeze.dev.txt  stellarmesh.py
.github/: release.yml  test.yml
.github/workflows/: code-quality.yml  main.yml  release.yml  test.yml
docs/: conf.py  index.rst  install.rst  tutorials.rst
docs/_static/: custom.css
docs/_templates/: class.rst  layout.html
docs/api/: geometry.rst  index.rst  mesh.rst  moab.rst
docs/notebooks/tutorials/: surface_meshing.ipynb  volume_meshing.ipynb
examples/: imprinted-boxes.py  layered-torus.py  mesh-refinement.py  stellarmesh-logo.py
src/stellarmesh/: __init__.py  geometry.py  mesh.py  moab.py
tests/: conftest.py  test_examples.py  test_geometry.py  test_geometry_cq.py  test_mesh.py  test_mesh_benchmark.py  test_moab.py  test_tally.py
tests/data/: mesh_geom_bd_imprintedboxes.msh  mesh_geom_bd_nestedspheres.msh  mesh_geom_bd_sphere.msh
tests/integration/: test_mesh_benchmark.py  test_tally.py
tests/resources/: NCSX-LCFS.brep  concentric-cylinders-with-through-hole.msh
tests/unit/: test_mesh.py
tutorials/: surface_meshing.ipynb  volume_meshing.ipynb
