[project]
name = "stellarmesh"
version = "1.0.0.dev1"
authors = [{ name = "Alex Koen" }]
description = "Gmsh wrapper and DAGMC geometry creator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pymmg",
    "meshio[all]",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "N",
    "A",
    "B",
    "F",
    "D",
    "FBT",
    "C4",
    "SIM",
    "TD",
    "PL",
    "TRY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "TRY003",  # Exception with string (vs. defining custom exception)
    "PLR2004", # Magic number
]
pydocstyle.convention = "google"


[tool.pyright]
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "ocp-vscode>=2.9.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]
