[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stellarmesh"
authors = [{ name = "Alex Koen" }]
dynamic = ["version"]
description = "Meshing library for nuclear workflows."
readme = "README.rst"
requires-python = ">=3.11"
dependencies = ["numpy", "pymmg", "meshio[all]"]

[project.optional-dependencies]
dev = [
    "cadquery-ocp-stubs==7.8.1.1.post1",
    "ocp-vscode>=2.9.0",
    "pip>=25.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.8",
]


[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "N",
    "A",
    "B",
    "F",
    "D",
    "FBT",
    "C4",
    "SIM",
    "TD",
    "PL",
    "TRY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "TRY003",  # Exception with string (vs. defining custom exception)
    "PLR2004", # Magic number
]
pydocstyle.convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/test_*.py" = ["F811"] # Variable redefinition (required for fixtures)


[tool.pyright]
pythonVersion = "3.11"
